force-app/main/default/objects/ASF_CommnunicationLog__e/ASF_CommnunicationLog__e.object-meta.xml
<CustomObject>
    <label>ASF_CommnunicationLog</label>
    <pluralLabel>ASF_CommnunicationLogs</pluralLabel>
</CustomObject>