force-app/main/default/objects/ASF_CommnunicationLog__e/fields/CCCExternalId__c.field-meta.xml
<CustomField>
    <fullName>CCCExternalId__c</fullName>
    <label>CCCExternalId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>