force-app/main/default/objects/ASF_CommnunicationLog__e/fields/Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Communication_Channel__c</fullName>
    <label>Communication Channel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>