force-app/main/default/objects/ASF_CommnunicationLog__e/fields/CustomMetadataName__c.field-meta.xml
<CustomField>
    <fullName>CustomMetadataName__c</fullName>
    <label>CustomMetadataName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>