force-app/main/default/objects/ASF_CommnunicationLog__e/fields/PELoggerId__c.field-meta.xml
<CustomField>
    <fullName>PELoggerId__c</fullName>
    <label>PELoggerId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>