force-app/main/default/objects/ASF_CommnunicationLog__e/fields/RecordID__c.field-meta.xml
<CustomField>
    <fullName>RecordID__c</fullName>
    <label>RecordID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>